--- a/application.yaml
+++ b/application.yaml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: micro-service-config
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
